--- a/add_new_product.html
+++ b/add_new_product.html
@@ -18,12 +18,15 @@
     <!--Top Header-->
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+            <!--Nav Button-->
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" style="border-color: green;">
 				<span class="navbar-toggler-icon my-toggler"></span>
 			</button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <!--Vaste Logo-->
                 <a class="navbar-brand mr-auto" href="#"><span class="vastelogo"><i>#vastepiste</i></span></a>
                 <a class="nav-item mr-auto" href="#">
+                    <!--Serch Button-->
                     <form class="form-inline">
                         <input class="form-control mr-sm-1" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="border-radius: 15px !important;">Search</button>
@@ -32,15 +35,18 @@
                 <ul class="navbar-nav mt-2 mt-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="#" style="margin-top: -7px">
+                            <!--Heart icon for favourite product-->
                             <span class="heart_cart"><a href="#"><i class="fa fa-heart-o" style="font-size: 30px; margin-left: 15px"></i></a></span>
                         </a>
                     </li>
                     <li class="nav-item">
+                        <!--cart icon-->
                         <a class="nav-link" href="#" style="margin-top: -7px">
                             <span class="heart_cart"><a href="#"><i class="fa fa-cart-arrow-down" style="font-size: 30px; margin-left: 15px"></i></a></span>
                         </a>
                     </li>
                     <li class="nav-item dropdown">
+                        <!--Language display List-->
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
                             <img src="images/English.jpg" alt="English" class="langicon">
                         </a>
@@ -50,10 +56,10 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="customer_service_help_page.html">Customer Service</a>
+                        <a class="nav-link" href="customer_service_help_page.html">Customer Service</a> <!--Link to customer Service Page-->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about_us.html">About Us</a>
+                        <a class="nav-link" href="about_us.html">About Us</a> <!--Link to About Us Page-->
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="LogInpage.html">Login</a>
@@ -61,7 +67,7 @@
                             <a class="btn btn-secondary dropdown-toggle account_btn" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown">
                                 Account
                             </a>
-                            <div class="dropdown-menu small_account_window" aria-labelledby="dropdownMenuLink">
+                            <div class="dropdown-menu small_account_window" aria-labelledby="dropdownMenuLink"> <!--Dropdown menu-->
                                 <div class="row">
                                     <div class="col-md-12 text-center">
                                         <p style="font-size: 58px; color: #31a13c"><i class="fa fa-user-circle"></i></p>
@@ -92,25 +98,27 @@
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-2 account_block text-center">
+                <!--Company's Information fo new product-->
                 <p class="user_icon" style="font-size: 80px;"><i class="fa fa-user-circle"></i></p>
                 <p class="p_name">Company Name</p>
                 <p class="p_email">company.email@mail.fi</p>
                 <hr class="hr_account"></hr>
                 <div class="account_block_bnt">
-                    <a href="add_new_product.html" class="account_block_link">Add new product</a>
+                    <a href="add_new_product.html" class="account_block_link">Add new product</a> <!--Link to Add New Product page-->
                 </div>
                 <div class="account_block_bnt">
-                    <a href="change_company_ac.html" class="account_block_link">Edit Account</a>
+                    <a href="change_company_ac.html" class="account_block_link">Edit Account</a> <!--Link to Change Company Account page-->
                 </div>
                 <div class="account_block_bnt">
-                    <a href="main.html" class="account_block_link">Back to shop</a>
+                    <a href="main.html" class="account_block_link">Back to shop</a> <!--Link to Main page-->
                 </div>
                 <div class="account_block_bnt">
-                    <a href="#" class="account_block_link">Log out</a>
+                    <a href="#" class="account_block_link">Log out</a> <!-- Log Out an account -->
                 </div>
             </div>
             <div class="col-md-1"></div>
             <div class="col-md-6 col-sm-12 main_block">
+                <!--Product detail Information-->
                 <div class="col-md-12 col-sm-12 text-center">
                     <span class=" user_icon"><i class="fa fa-user-circle"></i></span>
                     <div class="separator" style="font-size: 24px">ADD NEW PRODUCT</div>
@@ -160,14 +168,16 @@
 			<div class="container-fluid text-center text-md-left">
 				<div class="row">
 					<div class="col-md-5 mt-md-0 mt-3">
-						<h6 class="text-uppercase">Footer Content</h6>
+                        <h6 class="text-uppercase">Footer Content</h6>
+                        <!--Footer information-->
 						<p style="font-size: 12px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 					<div class="col-md-1"></div>
 					<hr class="clearfix w-100 d-md-none pb-3">
 					<div class="col-md-3 mb-md-0 mb-3 col-sm-6">
-						<h6 class="text-uppercase">Contact Us</h6>
+                        <h6 class="text-uppercase">Contact Us</h6>
+                        <!-- List of Contact Link Information-->
 						<ul class="list-unstyled">
 							<li><a href="#!">Link 1</a></li>
 							<li><a href="#!">Link 2</a></li>
@@ -176,7 +186,8 @@
 						</ul>
 					</div>
 					<div class="col-md-3 mb-md-0 mb-3 col-sm-6">
-						<h6 class="text-uppercase">Policies & Info</h6>
+                        <h6 class="text-uppercase">Policies & Info</h6>
+                        <!--List of Policies & Information-->
 						<ul class="list-unstyled">
 							<li><a href="#!">Link 1</a></li>
 							<li><a href="#!">Link 2</a></li>
@@ -191,7 +202,8 @@
 
 
     <!--Javascript Links-->
-    <script src="main.js"></script>
+    <script src="main.js"></script> <!--Implement javascript function form main.js file-->
+    <!--Basic script while using boostrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js " integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj " crossorigin="anonymous "></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="anonymous "></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js " integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI " crossorigin="anonymous "></script>
