--- a/change_company_ac.html
+++ b/change_company_ac.html
@@ -4,7 +4,7 @@
 <head>
     <title>Vaste Webshop</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--asign the width of content by device's width and the initial sacle-->
     <!--Vaste CSS-->
     <link rel="stylesheet" type="text/css" href="css_files/vastestyle.css">
     <!--CSS Links-->
@@ -22,8 +22,10 @@
 	    	<span class="navbar-toggler-icon my-toggler"></span>
 	    </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <!--Vaste Logo-->
                 <a class="navbar-brand mr-auto" href="#"><span class="vastelogo"><i>#vastepiste</i></span></a>
                 <a class="nav-item mr-auto" href="#">
+                    <!--Search Button-->
                     <form class="form-inline">
                         <input class="form-control mr-sm-1" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="border-radius: 15px !important;">Search</button>
@@ -31,33 +33,36 @@
                 </a>
                 <ul class="navbar-nav mt-2 mt-lg-0">
                     <li class="nav-item">
+                        <!--Heart for favourite product-->
                         <a class="nav-link" href="#" style="margin-top: -7px">
                             <span class="heart_cart"><a href="#"><i class="fa fa-heart-o" style="font-size: 30px; margin-left: 15px"></i></a></span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" style="margin-top: -7px">
+                            <!--Cart icon-->
                             <span class="heart_cart"><a href="#"><i class="fa fa-cart-arrow-down" style="font-size: 30px; margin-left: 15px"></i></a></span>
                         </a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown"> <!--Language list display-->
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
                             <img src="images/English.jpg" alt="English" class="langicon">
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <!--Dropdown Language List-->
                             <a class="dropdown-item" href="#"><img src="images/fiflag.jpg" alt="Finnish" class="langicon">&nbsp;Finnish</a>
                             <a class="dropdown-item" href="#"><img src="images/flag-Sweden.jpg" alt="Sweden" class="langicon">&nbsp;Swedish</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="customer_service_help_page.html">Customer Service</a>
+                        <a class="nav-link" href="customer_service_help_page.html">Customer Service</a> <!--Link to Customer Service Page-->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about_us.html">About Us</a>
+                        <a class="nav-link" href="about_us.html">About Us</a> <!--Link to About Us page-->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="LogInpage.html">Login</a>
+                        <a class="nav-link" href="LogInpage.html">Login</a> <!--Link to LogIn page-->
                         <div class="btn-group dropleft" style="margin-top: 2px" hidden>
+                            <!--Company Account Information-->
                             <a class="btn btn-secondary dropdown-toggle account_btn" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown">
                                 Account
                             </a>
@@ -91,11 +96,13 @@
         <!--Form-->
         <div class="row">
             <div class="col-md-1"></div>
+            <!--Left side form display Comapny basic information and actions list-->
             <div class="col-md-2 account_block text-center">
                 <p class="user_icon" style="font-size: 80px;"><i class="fa fa-user-circle"></i></p>
                 <p class="p_name">Company Name</p>
                 <p class="p_email">company.email@mail.fi</p>
                 <hr class="hr_account"></hr>
+                <!--Action List-->
                 <div class="account_block_bnt">
                     <a href="add_new_product.html" class="account_block_link">Add new product</a>
                 </div>
@@ -110,6 +117,7 @@
                 </div>
             </div>
             <div class="col-md-1"></div>
+            <!--Change Company Account Information Form-->
             <div class="col-md-6 col-sm-12 main_block">
                 <div class="col-md-12 col-sm-12 text-center">
                     <span class=" user_icon"><i class="fa fa-user-circle"></i></span>
@@ -186,6 +194,7 @@
             <div class="container-fluid text-center text-md-left">
                 <div class="row">
                     <div class="col-md-5 mt-md-0 mt-3">
+                        <!--Footer Information-->
                         <h6 class="text-uppercase">Footer Content</h6>
                         <p style="font-size: 12px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -194,6 +203,7 @@
                     <hr class="clearfix w-100 d-md-none pb-3">
                     <div class="col-md-3 mb-md-0 mb-3 col-sm-6">
                         <h6 class="text-uppercase">Contact Us</h6>
+                        <!--Contact List-->
                         <ul class="list-unstyled">
                             <li><a href="#!">Link 1</a></li>
                             <li><a href="#!">Link 2</a></li>
@@ -203,6 +213,7 @@
                     </div>
                     <div class="col-md-3 mb-md-0 mb-3 col-sm-6">
                         <h6 class="text-uppercase">Policies & Info</h6>
+                        <!--Policies and & Info List-->
                         <ul class="list-unstyled">
                             <li><a href="#!">Link 1</a></li>
                             <li><a href="#!">Link 2</a></li>
@@ -217,7 +228,7 @@
 
 
     <!--Javascript Links-->
-    <script src="main.js"></script>
+    <script src="main.js"></script>  <!--Implement javascript function form main.js file-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
