--- a/about_us.html
+++ b/about_us.html
@@ -22,8 +22,10 @@
                 <span class="navbar-toggler-icon my-toggler"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <!--Vaste Logo-->
                 <a class="navbar-brand mr-auto" href="#"><span class="vastelogo"><i>#vastepiste</i></span></a>
                 <a class="nav-item mr-auto" href="#">
+                    <!--Search Button-->
                     <form class="form-inline">
                         <input class="form-control mr-sm-1" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="border-radius: 15px !important;">Search</button>
@@ -40,6 +42,7 @@
                             <span class="heart_cart"><a href="#"><i class="fa fa-cart-arrow-down" style="font-size: 30px; margin-left: 15px"></i></a></span>
                         </a>
                     </li>
+                    <!--Language display-->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
                             <img src="images/English.jpg" alt="English" class="langicon">
@@ -94,6 +97,7 @@
                 <div class="col-md-12 col-sm-12 text-center">
                     <div style="font-size: 30px; margin-top: 10px;">ABOUT US</div>
                     <hr></hr>
+                    <!--Platform Information-->
                     <p style="margin-top: 20px">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
                         in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -155,7 +159,7 @@
 
 
     <!--Javascript Links-->
-    <script src="main.js"></script>
+    <script src="main.js"></script>  <!--Implement javascript function form main.js file-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
