--- a/change_customer_ac.html
+++ b/change_customer_ac.html
@@ -18,29 +18,32 @@
     <!--Top Header-->
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+            <!--Nav button-->
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" style="border-color: green;">
 				<span class="navbar-toggler-icon my-toggler"></span>
 			</button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <a class="navbar-brand mr-auto" href="#"><span class="vastelogo"><i>#vastepiste</i></span></a>
-                <a class="nav-item mr-auto" href="#">
+                <a class="navbar-brand mr-auto" href="#"><span class="vastelogo"><i>#vastepiste</i></span></a> <!--Vaste Logo-->
+                <a class="nav-item mr-auto" href="#"> <!--Search section-->
                     <form class="form-inline">
                         <input class="form-control mr-sm-1" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="border-radius: 15px !important;">Search</button>
                     </form>
                 </a>
                 <ul class="navbar-nav mt-2 mt-lg-0">
-                    <li class="nav-item">
+                    <li class="nav-item"> 
                         <a class="nav-link" href="#" style="margin-top: -7px">
+                            <!--Heart icon for favourite product-->
                             <span class="heart_cart"><a href="#"><i class="fa fa-heart-o" style="font-size: 30px; margin-left: 15px"></i></a></span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" style="margin-top: -7px">
+                            <!--cart icon-->
                             <span class="heart_cart"><a href="#"><i class="fa fa-cart-arrow-down" style="font-size: 30px; margin-left: 15px"></i></a></span>
                         </a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown"> <!--language display dropdown list-->
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
                             <img src="images/English.jpg" alt="English" class="langicon">
                         </a>
@@ -49,6 +52,7 @@
                             <a class="dropdown-item" href="#"><img src="images/flag-Sweden.jpg" alt="Sweden" class="langicon">&nbsp;Swedish</a>
                         </div>
                     </li>
+                    <!--Link to Customer Service, About Us and LogIn pages-->
                     <li class="nav-item">
                         <a class="nav-link" href="customer_service_help_page.html">Customer Service</a>
                     </li>
@@ -92,10 +96,12 @@
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-2 account_block text-center">
+                <!--Basic Account Information and Actions-->
                 <p class="user_icon" style="font-size: 80px;"><i class="fa fa-user-circle"></i></p>
                 <p class="p_name">Firstname Surname</p>
                 <p class="p_email">customer.email@mail.fi</p>
                 <hr class="hr_account"></hr>
+                <!--Actions List-->
                 <div class="account_block_bnt">
                     <a href="my_orders.html" class="account_block_link">Order History</a>
                 </div>
@@ -110,6 +116,7 @@
                 </div>
             </div>
             <div class="col-md-1"></div>
+            <!--Change Account Information-->
                 <div class="col-md-6 col-sm-12 main_block">
                 <div class="col-md-12 col-sm-12 text-center">
                     <span class=" user_icon"><i class="fa fa-user-circle"></i></span>
@@ -178,6 +185,7 @@
             <div class="container-fluid text-center text-md-left">
                 <div class="row">
                     <div class="col-md-5 mt-md-0 mt-3">
+                        <!--Footer Content-->
                         <h6 class="text-uppercase">Footer Content</h6>
                         <p style="font-size: 12px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -186,6 +194,7 @@
                     <hr class="clearfix w-100 d-md-none pb-3">
                     <div class="col-md-3 mb-md-0 mb-3 col-sm-6">
                         <h6 class="text-uppercase">Contact Us</h6>
+                        <!--Company Contact List-->
                         <ul class="list-unstyled">
                             <li><a href="#!">Link 1</a></li>
                             <li><a href="#!">Link 2</a></li>
@@ -195,6 +204,7 @@
                     </div>
                     <div class="col-md-3 mb-md-0 mb-3 col-sm-6">
                         <h6 class="text-uppercase">Policies & Info</h6>
+                        <!--Policies & Info list-->
                         <ul class="list-unstyled">
                             <li><a href="#!">Link 1</a></li>
                             <li><a href="#!">Link 2</a></li>
@@ -208,7 +218,7 @@
     </div>
 
     <!--Javascript Links-->
-    <script src="main.js"></script>
+    <script src="main.js"></script>  <!--Implement javascript function form main.js file-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
