--- a/my_cart.html
+++ b/my_cart.html
@@ -19,29 +19,30 @@
     <!--Top Header-->
    <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+         <!--Nav Button-->
          <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" style="border-color: green;">
 				<span class="navbar-toggler-icon my-toggler"></span>
 			</button>
          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <a class="navbar-brand mr-auto" href="#"><span class="vastelogo"><i>#vastepiste</i></span></a>
             <a class="nav-item mr-auto" href="#">
-               <form class="form-inline">
+               <form class="form-inline"> <!--Search Section-->
                   <input class="form-control mr-sm-1" type="search" placeholder="Search" aria-label="Search">
                   <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="border-radius: 15px !important;">Search</button>
                </form>
             </a>
             <ul class="navbar-nav mt-2 mt-lg-0">
-               <li class="nav-item">
+               <li class="nav-item"> <!--Heart Icon for favourite product-->
                   <a class="nav-link" href="#" style="margin-top: -7px">
                      <span class="heart_cart"><a href="#"><i class="fa fa-heart-o" style="font-size: 30px; margin-left: 15px"></i></a></span>
                   </a>
                </li>
-               <li class="nav-item">
+               <li class="nav-item"> <!--cart icon-->
                   <a class="nav-link" href="#" style="margin-top: -7px">
                      <span class="heart_cart"><a href="#"><i class="fa fa-cart-arrow-down" style="font-size: 30px; margin-left: 15px"></i></a></span>
                   </a>
                </li>
-               <li class="nav-item dropdown">
+               <li class="nav-item dropdown"> <!--Languages list-->
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
                      <img src="images/English.jpg" alt="English" class="langicon">
                   </a>
@@ -52,6 +53,7 @@
                      </a>
                   </div>
                </li>
+               <!--Link to Customer Service, About Us and LogIn pages-->
                <li class="nav-item">
                   <a class="nav-link" href="customer_service_help_page.html">Customer Service</a>
                </li>
@@ -94,6 +96,7 @@
       <div class="row">
          <div class="col-md-1"></div>
          <div class="col-md-2 account_block text-center">
+            <!-- Customer basic info and action list-->
             <p class="user_icon" style="font-size: 80px;"><i class="fa fa-user-circle"></i></p>
             <p class="p_name">Firstname Surname</p>
             <p class="p_email">customer.email@mail.fi</p>
@@ -121,7 +124,8 @@
                   <div class="row">
                     <aside class="col-lg-12 orders_block">
                         <div>
-                            <table class="table table-borderless table-shopping-cart">
+                           <!-- Cart table form title-->
+                            <table class="table table-borderless table-shopping-cart"> 
                                 <thead class="text-muted">
                                     <tr class="small text-uppercase">
                                         <th scope="col">Product</th>
@@ -132,30 +136,33 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>
+                                        <td> <!--First Column -->
                                             <figure class="itemside align-items-center">
-                                                <div><img src="./images/placeholder.png" class="img-sm"></div>
-                                                <figcaption class="info">
+                                               <!-- Product Picture-->
+                                                <div><img src="./images/placeholder.png" class="img-sm"></div> 
+                                                <!-- Product Info -->
+                                                <figcaption class="info"> 
+                                                   <!-- define Caption for Product picture -->
                                                     <a href="#" class="title text-dark">Product Name</a>
                                                     <p class="text-muted small">Some text <br> Some text</p>
                                                 </figcaption>
                                             </figure>
                                         </td>
-                                        <td> 
-                                            <select class="form-control">
+                                        <td> <!--Second Column -->
+                                            <select class="form-control"> <!-- selected list-->
                                                 <option>1</option>
                                                 <option>2</option>  
                                                 <option>3</option>  
                                                 <option>4</option>  
                                             </select> 
                                         </td>
-                                        <td> 
+                                        <td> <!--third column -->
                                             <div class="price-wrap"> 
                                                 <var class="price">$XXX</var> 
                                                 <small class="text-muted"> $XXX each </small> 
                                             </div> <!-- price-wrap .// -->
                                         </td>
-                                        <td class="text-right"> 
+                                        <td class="text-right"> <!-- display con tent in the table without title-->
                                             <a data-original-title="Save to Wishlist" title="" href="" class="btn btn-light" data-toggle="tooltip"> <i class="fa fa-heart"></i></a> 
                                             <a href="" class="btn btn-light"> Remove</a>
                                         </td>
@@ -172,44 +179,47 @@
             </div> <!--col-md-12 col-sm-12 text-center-->
          </div> <!--col-md-6 col-sm-12 main_block-->
       </div> <!-- row -->
+      
       <!-- Footer -->
-      <footer class="page-footer font-small pt-4" style="margin-top: 100px; background-color: #312B2B; margin-left: -15px; margin-right: -15px; color: white ">
-         <div class="container-fluid text-center text-md-left">
-            <div class="row">
-               <div class="col-md-5 mt-md-0 mt-3">
-                  <h6 class="text-uppercase">Footer Content</h6>
-                     <p style="font-size: 12px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                     </p>
-               </div>
-               <div class="col-md-1"></div>
-               <hr class="clearfix w-100 d-md-none pb-3">
-               <div class="col-md-3 mb-md-0 mb-3 col-sm-6">
-                  <h6 class="text-uppercase">Contact Us</h6>
-                  <ul class="list-unstyled">
-                     <li><a href="#!">Link 1</a></li>
-                     <li><a href="#!">Link 2</a></li>
-                     <li><a href="#!">Link 3</a></li>
-                     <li><a href="#!">Link 4</a></li>
-                  </ul>
-               </div>
-               <div class="col-md-3 mb-md-0 mb-3 col-sm-6">
-                  <h6 class="text-uppercase">Policies & Info</h6>
-                  <ul class="list-unstyled">
-                     <li><a href="#!">Link 1</a></li>
-                     <li><a href="#!">Link 2</a></li>
-                     <li><a href="#!">Link 3</a></li>
-                     <li><a href="#!">Link 4</a></li>
-                  </ul>
-               </div>
+        <footer class="page-footer font-small pt-4" style="margin-top: 60px; background-color: #312B2B; margin-left: -15px; margin-right: -15px; color: white">
+            <div class="container-fluid text-center text-md-left">
+                <div class="row">
+                    <div class="col-md-5 mt-md-0 mt-3">
+                        <!-- Footer Content -->
+                        <h6 class="text-uppercase">Footer Content</h6>
+                        <p style="font-size: 12px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
+                    <div class="col-md-1"></div>
+                    <hr class="clearfix w-100 d-md-none pb-3">
+                    <div class="col-md-3 mb-md-0 mb-3 col-sm-6">
+                        <h6 class="text-uppercase">Contact Us</h6>
+                        <ul class="list-unstyled">
+                             <!-- Contact List -->
+                            <li><a href="#!">Link 1</a></li>
+                            <li><a href="#!">Link 2</a></li>
+                            <li><a href="#!">Link 3</a></li>
+                            <li><a href="#!">Link 4</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3 mb-md-0 mb-3 col-sm-6">
+                        <h6 class="text-uppercase">Policies & Info</h6>
+                        <ul class="list-unstyled">
+                             <!-- Policies & Info List -->
+                            <li><a href="#!">Link 1</a></li>
+                            <li><a href="#!">Link 2</a></li>
+                            <li><a href="#!">Link 3</a></li>
+                            <li><a href="#!">Link 4</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-         </div>
-      </footer>
+        </footer>
    </div><!--class="container-fluid"-->
 
     <!--Javascript Links-->
 
-    <script src="./main.js"></script>
+    <script src="./main.js"></script>  <!--Implement javascript function form main.js file-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
