--- a/order_information_completed.html
+++ b/order_information_completed.html
@@ -18,28 +18,30 @@
     <!--Top Header-->
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+            <!--Nav Button-->
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" style="border-color: green;">
 				<span class="navbar-toggler-icon my-toggler"></span>
 			</button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <a class="navbar-brand mr-auto" href="#"><span class="vastelogo"><i>#vastepiste</i></span></a>
                 <a class="nav-item mr-auto" href="#">
-                    <form class="form-inline">
+                    <form class="form-inline"> <!--Search Section-->
                         <input class="form-control mr-sm-1" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="border-radius: 15px !important;">Search</button>
                     </form>
                 </a>
                 <ul class="navbar-nav mt-2 mt-lg-0">
-                    <li class="nav-item">
+                    <li class="nav-item"> <!--Heart Icon for favourite product-->
                         <a class="nav-link" href="#" style="margin-top: -7px">
                             <span class="heart_cart"><a href="#"><i class="fa fa-heart-o" style="font-size: 30px; margin-left: 15px"></i></a></span>
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item">  <!--cart icon-->
                         <a class="nav-link" href="#" style="margin-top: -7px">
                             <span class="heart_cart"><a href="#"><i class="fa fa-cart-arrow-down" style="font-size: 30px; margin-left: 15px"></i></a></span>
                         </a>
                     </li>
+                    <!--Languages list-->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
                             <img src="images/English.jpg" alt="English" class="langicon">
@@ -49,6 +51,7 @@
                             <a class="dropdown-item" href="#"><img src="images/flag-Sweden.jpg" alt="Sweden" class="langicon">&nbsp;Swedish</a>
                         </div>
                     </li>
+                    <!--Link to Customer Service, About Us and LogIn pages-->
                     <li class="nav-item">
                         <a class="nav-link" href="customer_service_help_page.html">Customer Service</a>
                     </li>
@@ -91,6 +94,7 @@
         <!--Form-->
         <div class="row">
             <div class="col-md-1"></div>
+            <!-- Customer basic I fo and actions-->
             <div class="col-md-2 account_block text-center">
                 <p class="user_icon" style="font-size: 80px;"><i class="fa fa-user-circle"></i></p>
                 <p class="p_name">Firstname Surname</p>
@@ -109,6 +113,7 @@
                     <a href="#" class="account_block_link">Log out</a>
                 </div>
             </div>
+            <!--Order infomation -->
             <div class="col-md-1"></div>
             <div class="col-md-6 col-sm-12 main_block">
                 <div class="col-md-12 col-sm-12 text-center">
@@ -116,7 +121,7 @@
                         <div class="col-md-1" style="margin-top: 2%"><a href="my_orders.html"><i class="fa fa-chevron-left chevron_back fa-2x"></i></a></div>
                         <div class="offset-1 col-md-8"><div style="font-size: 24px; font-weight: bold; margin-top: 10px;">ORDER INFORMATION</div></div>
                     </div>
-                    <hr style="margin-top: 15px;"></hr>
+                    <hr style="margin-top: 15px;"></hr> <!--thematic break -->
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <p class="delivery_text_order_info">Delivered XX.XX.XX </p>
@@ -145,6 +150,7 @@
                         <div class="row" style="margin-top: 3%">
                             <div class="col-md-2"><p class="order_info_text_in_block">Tracking</p></div>
                         </div>
+                        <!-- Tracking Box-->
                         <div class="tracking_block">
                             <div class="row">
                                 <div class="col-md-8">
@@ -169,6 +175,7 @@
                             </div>
                             <button type="button" class="btn btn-lg" style="background-color: white; width: 90%; height: 50px; border: none; margin-top: -5%; border-top: 1px solid gray">Show more<i class="fa fa-refresh" style="padding: 5px;"></i></button>
                         </div>
+                        <!-- Delievry Address-->
                         <div class="row" style="margin-top: 3%">
                             <div class="col-md-3"><p class="order_info_text_in_block">Delivery address</p></div>
                         </div>
@@ -184,6 +191,7 @@
                                 <div class="col-md-5"></div>
                             </div>
                         </div>
+                        <!-- Service-->
                         <div class="row" style="margin-top: 3%">
                             <div class="col-md-2"><p class="order_info_text_in_block">Service</p></div>
                         </div>
@@ -207,11 +215,12 @@
                 </div> <!--Class col-md 12 col-sm-12 text-center -->
             </div> <!--Main block -->
         </div>
-        <!-- Footer -->
-        <footer class="page-footer font-small pt-4" style="margin-top: 100px; background-color: #312B2B; margin-left: -15px; margin-right: -15px; color: white ">
+        !-- Footer -->
+        <footer class="page-footer font-small pt-4" style="margin-top: 60px; background-color: #312B2B; margin-left: -15px; margin-right: -15px; color: white">
             <div class="container-fluid text-center text-md-left">
                 <div class="row">
                     <div class="col-md-5 mt-md-0 mt-3">
+                        <!-- Footer Content -->
                         <h6 class="text-uppercase">Footer Content</h6>
                         <p style="font-size: 12px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -221,6 +230,7 @@
                     <div class="col-md-3 mb-md-0 mb-3 col-sm-6">
                         <h6 class="text-uppercase">Contact Us</h6>
                         <ul class="list-unstyled">
+                             <!-- Contact List -->
                             <li><a href="#!">Link 1</a></li>
                             <li><a href="#!">Link 2</a></li>
                             <li><a href="#!">Link 3</a></li>
@@ -228,8 +238,9 @@
                         </ul>
                     </div>
                     <div class="col-md-3 mb-md-0 mb-3 col-sm-6">
-                        <h6 class="text-uppercase ">Policies & Info</h6>
+                        <h6 class="text-uppercase">Policies & Info</h6>
                         <ul class="list-unstyled">
+                             <!-- Policies & Info List -->
                             <li><a href="#!">Link 1</a></li>
                             <li><a href="#!">Link 2</a></li>
                             <li><a href="#!">Link 3</a></li>
@@ -242,7 +253,7 @@
     </div>
 
     <!--Javascript Links-->
-    <script src="./main.js"></script>
+    <script src="./main.js"></script>  <!--Implement javascript function form main.js file-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
